--- a/index.html
+++ b/index.html
@@ -33,18 +33,20 @@
 <body>
 
     <header class="bg-[#FFFBF0] py-20 px-4  md:px-32 ">
+
         <section class="flex flex-col sm:flex-col lg:flex-row justify-between items-center">
                 <img class="m-4" src="./icons/logo.png" width="380px" height="300px" alt="">
                <div class="list-none rounded-xl gap-4 ">
                    <ul class=" flex flex-col sm:flex-row h-12 gap-4">
-                        <li class="bg-red-200 rounded-md w-24 text-center pt-2 font-medium "><a href="">Houme</a></li>
-                        <li class="bg-red-200 rounded-md w-24 text-center pt-2 font-medium "><a href="">Product</a></li>
-                        <li class="bg-red-200 rounded-md w-24 text-center pt-2 font-medium "><a href="">About us</a></li>
-                         <li class="bg-red-200 rounded-md w-24 text-center pt-2 font-medium "><a href="">Contact us</a></li>
+                        <li class="bg-[#FABE4C] rounded-md w-24 text-center pt-2 font-medium "><a href="">Houme</a></li>
+                        <li class="bg-[#FABE4C] rounded-md w-24 text-center pt-2 font-medium "><a href="">Product</a></li>
+                        <li class="bg-[#FABE4C] rounded-md w-24 text-center pt-2 font-medium "><a href="">About us</a></li>
+                         <li class="bg-[#FABE4C] rounded-md w-24 text-center pt-2 font-medium "><a href="">Contact us</a></li>
                     </ul>
                 </div>
             </div>
         </section>
+
         <section class="flex flex-col lg:flex-row justify-between items-center pt-14">
             <div class="space-y-3">
                 <h2 class="text-7xl pt-32 sm:pt-32 md:pt-0 font-normal uppercase font-bebas text-[#363958]" ><span class="text-[#FABE4C]">Be the Penguins</span><br>of Winter</h2>
@@ -63,18 +65,74 @@
             </div>
         </section>
 
-
     </header>
-    <section class="banner-container">
 
-    </section>
-    <main>
+
+    <main class="max-w-7xl mx-auto">
+
+        <section class="py-12">
+            <h2 class="text-5xl font-bebas">W0Man Jacket</h2>
+            <div class="grid grid-cols-1 sm:grid-cols-2 p-4 lg:grid-cols-3 gap-7 ">
+                           <!-- jacket-1 -->
+            <div class="drop-shadow-lg">
+                <div class="bg-[#F1F1F1] p-5 rounded-3xl">
+                    <img src="./images/jacket-1.png" alt="">
+                </div>
+                <h4 class=" text-2xl font-bold text-[#363958] my-2">Yellow Coat Jacket </h4>
+                <p class=" text-xl leading-6 font-normal my-2">Lorem Ipsum is simply dummy text of the 
+                    printing and typesetting industry.</p>
+                <div class=" flex justify-between ">
+                    <h3 class="text-[#FABE4C] text-3xl font-black">$234</h3>
+                    <button class=" py-4 px-9 rounded-xl text-[#FFF] bg-gradient-to-r uppercase  from-[#A4BC46] to-[#85A019]">
+                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 inline ">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 00-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 00-16.536-1.84M7.5 14.25L5.106 5.272M6 20.25a.75.75 0 11-1.5 0 .75.75 0 011.5 0zm12.75 0a.75.75 0 11-1.5 0 .75.75 0 011.5 0z" />
+                        </svg> buy now</button> 
+                </div>
+            </div>
+            <!-- jacket-2 -->
+            <div class="drop-shadow-lg">
+                <div class="bg-[#F1F1F1] p-5 rounded-3xl">
+                    <img src="./images/jacket-2.png" alt="">
+                </div>
+                <h4 class=" text-2xl font-bold text-[#363958] my-2">Yellow Coat Jacket </h4>
+                <p class=" text-xl leading-6 font-normal my-2">Lorem Ipsum is simply dummy text of the 
+                    printing and typesetting industry.</p>
+                <div class=" flex justify-between ">
+                    <h3 class="text-[#FABE4C] text-3xl font-black">$234</h3>
+                    <button class=" py-4 px-9 rounded-xl text-[#FFF] bg-gradient-to-r uppercase  from-[#A4BC46] to-[#85A019]">
+                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 inline ">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 00-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 00-16.536-1.84M7.5 14.25L5.106 5.272M6 20.25a.75.75 0 11-1.5 0 .75.75 0 011.5 0zm12.75 0a.75.75 0 11-1.5 0 .75.75 0 011.5 0z" />
+                        </svg> buy now</button> 
+                </div>
+            </div>
+            <!-- jacket-3 -->
+            <div class="drop-shadow-lg">
+                <div class="bg-[#F1F1F1] p-5 rounded-3xl">
+                    <img src="./images/jacket-3.png" alt="">
+                </div>
+                <h4 class=" text-2xl font-bold text-[#363958] my-2">Yellow Coat Jacket </h4>
+                <p class=" text-xl leading-6 font-normal my-2">Lorem Ipsum is simply dummy text of the 
+                    printing and typesetting industry.</p>
+                <div class=" flex justify-between ">
+                    <h3 class="text-[#FABE4C] text-3xl font-black">$234</h3>
+                    <button class=" py-4 px-9 rounded-xl text-[#FFF] bg-gradient-to-r uppercase  from-[#A4BC46] to-[#85A019]">
+                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 inline ">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 00-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 00-16.536-1.84M7.5 14.25L5.106 5.272M6 20.25a.75.75 0 11-1.5 0 .75.75 0 011.5 0zm12.75 0a.75.75 0 11-1.5 0 .75.75 0 011.5 0z" />
+                        </svg> buy now</button> 
+                </div>
+            </div>
+            </div>
+ 
+    
+        </section>
+
         <section class="">
 
         </section>
     </main>
 
     <footer>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
         
     </footer>
 
